assets/title_text_button.css
.title_text_button-wrapper {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 86px 28px;  
    background-color: #727272;
    color: #FFFFFF;
}

.title_text_button-title-wrapper {
    width: 100%;
    display: flex;
    flex-direction: row-reverse;
    justify-content: flex-end;  
    align-items: center;
    margin-bottom: 28px;
}

.title_text_button-title {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    flex-wrap: wrap;
    gap: 18px 5px;
    color: #FFFFFF;
    border-left: 1px solid white;
    padding-left: 2.2%;
}

.title_text_button-upper {
    margin-right: 10px;
}

.title_text_button-text {
    color: #FFFFFF;
}

.title_text_button-text {
    margin-bottom: 28px;
}

.title_text_button-text > p:nth-child(1) {
    margin-bottom: 14px;
    padding-right: 88px;
}

.title_text_button-text > p:nth-child(2) {
    margin-bottom: 0px;
    padding-right: 30px;
}

.title_text_button-button {
    display: flex;
    flex-direction: row;
}

.title_text_button-button > a {
    color: #FFFFFF;
    margin-right: 8px;
}

.contact_us_page-variation {
    .title_text_button-title-wrapper  {
        margin-bottom: 38px;
    }

    .title_text_button-title {
        padding-left: 2.396%;
    }

    .title_text_button-text {
        margin-bottom: 0;
    }

    .title_text_button-text p {
        padding-right: 0;
        line-height: 1.5;
        margin-bottom: 0;
    }
}



@media print, screen and (min-width: 1025px) {
    .title_text_button-wrapper.title_position-left  {
        padding: 94px 8.889%;
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
    }

    .title_text_button-wrapper.title_position-right  {
        padding: 152px 4.444%;
        display: flex;
        flex-direction: row-reverse;
        justify-content: center;
        align-items: center;
        align-items: center;
    }
 
    .title_text_button-title-wrapper.title_position-left  {
        display: flex;
        text-align: right;
        word-wrap: normal;
        min-width: 30.27%;
        width: unset;
        height: unset;
        align-items: unset;
        flex-direction: unset;
    }

    .title_text_button-title-wrapper.title_position-right  {
        min-width: 38.485%;
        display: flex;
        flex-direction: row-reverse;
        text-align: right;
        word-wrap: normal;
        width: unset;
        height: unset;
        align-items: center;
    }

    .title_text_button-upper {
        margin-right: unset;
    }

    .title_text_button-title {
        border-left: unset;
    }

    .title_text_button-title-wrapper.title_position-left > .title_text_button-title {
        padding: 0 9.6% 0 35.83%;
        border-right: 1px solid;
        justify-content: flex-end;
        /* max-width: 500px; */
    }

    .title_text_button-title-wrapper.title_position-right > .title_text_button-title {
        text-align: left;
        border-left: 1px solid;
        /* max-width: 500px; */
    }

    /* TODO: TO JE PADDING KOJI TREBA BITI 3% I NEKI VECI POSTOTAK ZA DRUGE KOMPONENTE */
    .title_text_button-button_text_wrapper-left { 
        padding-left: 3%;
    }
    
    .title_text_button-button_text_wrapper-right {
        padding: 0 21.59% 0 10.76%;
    }

    .title_text_button-text > p:nth-child(1) {
        margin-bottom: -6px;
        padding-right: 0px;
    }

    .title_text_button-text > p:nth-child(2) {
        margin-bottom: 0px;
        padding-right: 0px;
    }

    .desktop-padding {
        padding-left: var(--desktop-padding, 0%); /* Default value */
    }

    .contact_us_page-variation {
        align-items: center;

        .title_text_button-title-wrapper {
            margin-bottom: 0;
        }
    }

}

